engine: fix login-pf abuse
- Removed usage of login-pf on non login pages. Because the login
  page 'dark' area is fixed at the bottom of the page no scroll bar
  will appear if the content of the dark area does not fit on the
  screen. Extracted the look and feel into a new ovirt-container
  class.

Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1269953

--- a/packaging/branding/ovirt.brand/welcome_style.css
+++ b/packaging/branding/ovirt.brand/welcome_style.css
@@ -75,3 +75,22 @@
     display: block;
     margin-bottom: 75px;
 }
+
+.ovirt-container .container {
+    background-color: rgba(0, 0, 0, 0.25);
+    padding-left: 80px;
+    width: 100%;
+    clear: right;
+    color: #fff;
+    padding-bottom: 40px;
+}
+
+.ovirt-container select {
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    color: black;
+}
+
+.ovirt-container #brand {
+    position: relative;
+    top: -70px;
+}
